--fixed: added overflow hidden for skin cart

--- a/src/components/Carts/style.scss
+++ b/src/components/Carts/style.scss
@@ -12,6 +12,7 @@
   color: var(--color-text-primary);
   border-radius: 5px;
 
+  overflow: hidden;
   transition: all 0.3s ease-in-out;
 
   .skin-info {
